--- a/css/style.css
+++ b/css/style.css
@@ -182,14 +182,16 @@ header{
     font-size: .8em;
 }
 
-/*div de paginas*/
+
 .page_sections{
     width: 100%;
     position: relative;
     top: 50px;
 }
-/*Todas las página*/
-.page_home{
+
+.page-home,
+.page-about,
+.page-what{
     position: absolute;
 	width: 100%;
 	top: 0px;
@@ -197,7 +199,6 @@ header{
 }
 
 .personal-info{
-   /* background: green;*/
     position: relative;
     margin: 0px auto;
     margin-bottom: 35px;
@@ -209,7 +210,6 @@ header{
     width: 100%;
     height: 150px;
     text-align: center;   
-   /* background: yellow;*/
 }
 
 
@@ -218,14 +218,16 @@ header{
     height: 130px;
     margin: 0px auto;
     border-radius: 50%;
-    box-shadow: 0px 0px 20px 0px rgba(176, 125, 209,.5);
+    box-shadow: 0px 0px 10px rgba(176, 125, 209,.5);
 }
 .photo{
     width: 100%;
 }
 
 
-.infoParagraph{
+.infoParagraph,
+.aboutParagraph,
+.whatParagraph{
     font-family: 'Helvetica';
     margin: 12px 5px;  
     color: white;
@@ -240,12 +242,14 @@ header{
     width: 80%;
 }
 
-.skill-title{
+.skillTitle,
+.aboutTitle,
+.whatTitle{
     margin: 0px;
     padding: 0px 0px 20px 5px;
     font-family: 'Coolvetica';
     color: black;
-    font-size: 1.5em;
+    font-size: 1.7em;
     letter-spacing: 1px;
     text-shadow: 1px 2px 1px rgba(28, 110, 164, .8);
 }
@@ -255,7 +259,6 @@ header{
     margin: 0px 0px 30px 0px;
 	padding: 0px;
     list-style: none;
-    text-decoration: none;
     display: inline-block;
     font-weight: bold;
     color: white;
@@ -266,19 +269,56 @@ header{
 	padding: 5px;
 }
 
-.skill-li::before{
+.skill-li::before,
+.hobbieItem::before{
     content: "- ";
     text-shadow: 1px 2px 1px #b07dd1;
 }
 
 
-.about{
-
-    background: yellowgreen;
+.container-about{
+    position: relative;
+    margin: 0px auto;
+    width: 80%;
+    margin-bottom: 120px;
+    margin-top: 30px;
 }
-.what{
+.aboutTitles{
+    text-shadow: 1px 2px 1px rgba(28, 110, 164, .8);
+    margin-top: 15px;
+    padding-top: 0px;
+}
+.hobbie-container{
+    position: relative;
+    margin: 0px auto;
+    width: 100%;
+}
 
-    background: yellow;
+.hobbieList{
+    margin: 0px;
+    padding: 0px;
+    display: inline-block;
+    width: 48%;
+    color: white;
+    list-style: none;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+.hobbieItem{
+    margin: 0px;
+    padding: 5px;
+}
+
+
+.container-what{
+    position: relative;
+    margin: 0px auto;
+    width: 80%;
+    margin-bottom: 120px;
+    margin-top: 30px;
+}
+.whatTitle{
+    font-size: 2em;
 }
 
 
@@ -383,6 +423,9 @@ header{
     .i01{
         margin-left: 10px
     }
+    .container-about{
+        margin-top: 50px;
+    }
 
 }
 @media screen and (min-width: 950px){
@@ -408,7 +451,7 @@ header{
 
     .page_home > div{
         margin: 0px;
-        margin-left: 90px;
+        margin-left: 9%;
         padding: 25px 0px 0px 0px;
         display: inline-block;
         width: 40%;
@@ -424,16 +467,26 @@ header{
     }
 
     .infoParagraph{
-        font-size: .8em;
+        font-size: .9em;
     }
 
     .skill-title{
         font-size: 1.3em;
     }
     .skill-ul{
-        font-size: .9em;
+        font-size: 1em;
     }
 
+    .container-what{
+        margin-top: 50px;
+        width: 65%;
+    }
+    .whatTitle{
+        font-size: 2.1em;
+    }
+    .whatParagraph{
+        font-size: 1.1em;
+    }
 }
 
 @media screen and (min-width: 1024px){
@@ -449,6 +502,18 @@ header{
     }
     .skill-title{
         font-size: 1.4em;
+    }
+
+    .container-about{
+        width: 50%;
+    }
+    .hobbie-container{
+        margin-top: 60px;
+    }
+    .container-home{
+        margin: 0px auto;
+        margin-top: 70px;
+        width: 60%;
     }
     
 }
